# module-sentinel

./: .env.example  .gitignore  APPROVED_SQL_EXCEPTIONS.md  CASE_CONVERSION_GUIDE.md  CLAUDE.md  CPP_PARSER_DETECTION_ANALYSIS.md  GEMINI.md  PARSER_CAPABILITIES_REPORT.md  PARSER_CAPABILITIES_SPEC.md  PARSER_PITFALLS_ANALYSIS.md  PHASE_4_DETAILED_PLAN.md  README.md  REFACTOR_GUIDE.md  SEMANTIC_INTELLIGENCE_SPEC.md  analyze-http-cross-language.ts  analyze-http-patterns-simple.ts  analyze-rest-api-patterns.ts  analyze-unused.sh  build-enhanced-index.ts  build-simple.sh  capture-dashboard.ts  check-cross-lang.sql  cross-language-relationship-analysis.md  debug-dynamic-imports.ts  debug-parent-child-relationships.ts  diagnose-cross-language.ts  dockerfile  drizzle.config.ts  environment-variable-service-discovery-analysis.md  eslint.config.js  fix-camelcase.py  fix-lint-staged.sh  fix-togeneric-parsing.patch  gap-analysis-report.json  generate-call-flow.ts  generate-visualizations.ts  grpc-cross-language-analysis-summary.md  http-cross-language-analysis.md  mcp-server-config.json  minimal-semantic-test.mjs  (+35 more)
.devcontainer/: Dockerfile  devcontainer.json
.husky/: pre-commit
.mcp/: settings.json
.spec/: agentic-mcp.db-shm  agentic-mcp.db-wal
module-sentinel-rust/: Cargo.toml  DB_INTEGRATION_PLAN.md  FOUNDATIONAL_PHASE_SPEC.md  NEXT_STAGE_SPEC.md  PARSER_SPEC.md  SEMANTIC_DEDUPLICATION_SPEC.md  STAGE_2_TDD_PLAN.md  TABLE_IMPLEMENTATION_PLAN.md  TDD_PLAN.md  unused_code_warnings.txt
module-sentinel-rust/napi-bindings/: Cargo.toml  package.json
module-sentinel-rust/napi-bindings/src/: lib.rs
module-sentinel-rust/parser-service/: Cargo.toml  RUST_TEST_PROGRESS_REPORT.md  STAGE_3_4_TDD_PLAN.md  convert_codebert_to_onnx.py
module-sentinel-rust/parser-service/patterns/: python-api.yaml  rust-api.yaml  typescript-api.yaml
module-sentinel-rust/parser-service/src/: analyzers.rs  ast.rs  config.rs  lib.rs  main.rs  models.rs
module-sentinel-rust/parser-service/src/analysis/: data_flow_analyzer.rs  data_lineage_tracker.rs  endpoint_correlator.rs  flow_builder.rs  integrated_flow_analysis.rs  mod.rs  pattern_detector.rs  relationship_extractor.rs  semantic_analyzer.rs  semantic_tag_extractor.rs  similarity_calculator.rs  subprocess_detector.rs
module-sentinel-rust/parser-service/src/database/: adaptive_similarity_engine.rs  ai_feedback_integration.rs  bloom_filter.rs  cache_persistence.rs  embedding_manager.rs  flow_models.rs  flow_schema.sql  mod.rs  models.rs  orm.rs  project_database.rs  semantic_deduplicator.rs  semantic_pattern_engine.rs  semantic_pattern_engine_impl.rs  semantic_search.rs
module-sentinel-rust/parser-service/src/database/cache/: cache_stats.rs  hierarchical_cache.rs  lru_cache.rs  mod.rs  predictive_cache.rs
module-sentinel-rust/parser-service/src/parsers/: mod.rs
module-sentinel-rust/parser-service/src/parsers/tree_sitter/: ast_converter.rs  error_recovery.rs  global_model_cache.rs  intelligent_parser.rs  language.rs  ml_integration.rs  mod.rs  model_manager.rs  parser.rs  tokenizer.rs
module-sentinel-rust/parser-service/src/patterns/: engine.rs  language_definition.rs  mod.rs  pattern.rs
module-sentinel-rust/parser-service/src/services/: mod.rs  parsing_service.rs  unified_parsing_service.rs
module-sentinel-rust/parser-service/tests/: advanced_cpp_parsing_tests.rs  analysis_integration_tests.rs  api_pattern_tests.rs  ast_tests.rs  cache_persistence_tests.rs  cross_language_flow_integration_tests.rs  debug_duplicate_detection.rs  debug_factory_pattern.rs  debug_integration_test.rs  debug_pattern_check.rs  direct_parse_store_test.rs  integration_test_comprehensive.rs  intelligent_parser_tests.rs  model_caching_test.rs  orm_tests.rs  parsing_service_tests.rs  pattern_debug_test.rs  pattern_detector_detailed_test.rs  pattern_tests.rs  phase3_2_cache_optimization_tests.rs  phase3_bloom_filter_tests.rs  project_database_tests.rs  real_project_e2e_test.rs  regex_test.rs  semantic_deduplication_tests.rs  semantic_pattern_tests.rs  simple_analysis_test.rs  simple_api_detection_test.rs  simple_duplicate_detection_test.rs  tree_sitter_parser_tests.rs  visitor_tests.rs
module-sentinel-rust/parser-service/tests/common/: mod.rs
module-sentinel-rust/shared-types/: Cargo.toml
module-sentinel-rust/shared-types/src/: lib.rs
(+558 files in other folders)
