[workspace]
resolver = "2"
members = [
    "parser-service",
    "shared-types",
    "napi-bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Module Sentinel Team"]
license = "MIT"
repository = "https://github.com/module-sentinel/module-sentinel"

[workspace.dependencies]
# Core dependencies
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-rust = "0.23"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Performance
rayon = "1.10"
memmap2 = "0.9"
dashmap = "6.1"

# Security
sha2 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
walkdir = "2.5"
glob = "0.3"
once_cell = "1.20"